[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
object = "0.32.1"
im = "15.1.0"
#floem = { git = "https://github.com/lapce/floem.git" }
floem = { path = "../floem", features = ["profile"] }
rfd = "0.12"
symbolic-demangle = "12.4.1"
symbolic-common = "12.4.1"
iced-x86 = "1.20.0"
env_logger = "0.10.0"

[profile.release]
debug = true

[patch.crates-io]
winit = { path = "../winit" }
puffin = { path = "../puffin/puffin" }
